--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="aaa" />
-    <meta property="og:image" content="ddd"/>
+    <meta property="og:url" content="" />
+    
+    <meta property="og:title" content="aaa" />
+    <meta property="og:description" content="bbb" />
+
+    <meta property="og:image" content=""/>
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="474" />
     <meta property="og:image:height" content="246" />
